syntax = "proto3";

package yandex.cloud.priv.disk_manager.v1;

option go_package = "a.yandex-team.ru/cloud/disk_manager/api/yandex/cloud/priv/disk_manager/v1;disk_manager";

message ErrorDetails {
    int64 code = 1;
    string message = 2;
    bool internal = 3;
}
