syntax = "proto3";

package dataplane;

import "cloud/disk_manager/internal/pkg/types/types.proto";

option go_package = "a.yandex-team.ru/cloud/disk_manager/internal/pkg/dataplane/protos";

////////////////////////////////////////////////////////////////////////////////

message CreateSnapshotFromDiskRequest {
    reserved 3;

    types.Disk SrcDisk = 1;
    string SrcDiskBaseCheckpointId = 5;
    string SrcDiskCheckpointId = 2;
    string BaseSnapshotId = 6;
    string DstSnapshotId = 4;
    bool UseS3 = 7;
}

message CreateSnapshotFromDiskResponse {
    uint64 SnapshotSize = 1;
    uint64 SnapshotStorageSize = 2;
}

message CreateSnapshotFromDiskTaskState {
    CreateSnapshotFromDiskRequest Request = 1;
    uint32 ShallowCopyMilestoneChunkIndex = 6;
    uint32 TransferMilestoneChunkIndex = 2;
    double Progress = 7;
    uint64 SnapshotSize = 3;
    uint64 SnapshotStorageSize = 4;
    uint32 ChunkCount = 5;
}

message CreateSnapshotFromDiskMetadata {
    double Progress = 1;
}
