syntax = "proto3";

package dataplane;

import "cloud/disk_manager/internal/pkg/types/types.proto";

option go_package = "a.yandex-team.ru/cloud/disk_manager/internal/pkg/dataplane/protos";

////////////////////////////////////////////////////////////////////////////////

message TransferFromDiskToDiskRequest {
    types.Disk SrcDisk = 1;
    string SrcDiskCheckpointId = 2;
    types.Disk DstDisk = 3;
}

message TransferFromDiskToDiskTaskState {
    TransferFromDiskToDiskRequest Request = 1;
    uint32 MilestoneChunkIndex = 2;
    double Progress = 4;
    uint32 ChunkCount = 3;
}

message TransferFromDiskToDiskMetadata {
    double Progress = 1;
}
